src/v8/CAPI_Settings.pas


//------------------------------------------------------------------------------
function Settings_Get_UEweight(): Double; CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        Result := ActiveCircuit[ActiveActor].UEWeight
    end
    else
        Result := 0.0;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_LossRegs(ValuePtr: PInteger; ValueCount: Integer); CDECL;
var
    Value: PIntegerArray;
    i, j: Integer;
begin
    Value := PIntegerArray(ValuePtr);
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        ReAllocMem(ActiveCircuit[ActiveActor].LossRegs, Sizeof(ActiveCircuit[ActiveActor].LossRegs^[1]) * (1 - (0) + (ValueCount - 1)));
        j := 1;
        for i := (0) to (ValueCount - 1) do
        begin
            ActiveCircuit[ActiveActor].LossRegs^[j] := Value[i];
            Inc(j);
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_LossWeight(Value: Double); CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        ActiveCircuit[ActiveActor].LossWeight := Value
    end;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_Trapezoidal(Value: Wordbool); CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        ActiveCircuit[ActiveActor].TrapezoidalIntegration := Value
    end;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_UEregs(ValuePtr: PInteger; ValueCount: Integer); CDECL;
var
    Value: PIntegerArray;
    i, j: Integer;
begin
    Value := PIntegerArray(ValuePtr);
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        ReAllocMem(ActiveCircuit[ActiveActor].UERegs, Sizeof(ActiveCircuit[ActiveActor].UERegs^[1]) * (1 - (0) + (ValueCount - 1)));
        j := 1;
        for i := (0) to (ValueCount - 1) do
        begin
            ActiveCircuit[ActiveActor].UERegs^[j] := Value[i];
            Inc(j);
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_UEweight(Value: Double); CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        ActiveCircuit[ActiveActor].UEWeight := Value
    end;
end;
//------------------------------------------------------------------------------
function Settings_Get_ControlTrace(): Wordbool; CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
        Result := ActiveCircuit[ActiveActor].ControlQueue.TraceLog;
end;
//------------------------------------------------------------------------------
procedure Settings_Get_VoltageBases(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
var
    Result: PDoubleArray;
    i, Count: Integer;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
        with ActiveCircuit[ActiveActor] do
        begin
      {Count the number of voltagebases specified}
            i := 0;
            repeat
                Inc(i);
            until LegalVoltageBases^[i] = 0.0;
            Count := i - 1;

            Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (Count - 1) + 1);

            for i := 0 to Count - 1 do
                Result[i] := LegalVoltageBases^[i + 1];

        end
    else
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
end;

procedure Settings_Get_VoltageBases_GR(); CDECL;
// Same as Settings_Get_VoltageBases but uses global result (GR) pointers
begin
    Settings_Get_VoltageBases(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure Settings_Set_ControlTrace(Value: Wordbool); CDECL;
begin

    if ActiveCircuit[ActiveActor] <> NIL then
        ActiveCircuit[ActiveActor].ControlQueue.TraceLog := Value;

end;
//------------------------------------------------------------------------------
procedure Settings_Set_VoltageBases(ValuePtr: PDouble; ValueCount: Integer); CDECL;
var
    Value: PDoubleArray;
    i, j, Num: Integer;

begin
    Value := PDoubleArray(ValuePtr);
    Num := (ValueCount - 1) - (0) + 1;

     {LegalVoltageBases is a zero-terminated array, so we have to allocate
      one more than the number of actual values}

    with ActiveCircuit[ActiveActor] do
    begin
        Reallocmem(LegalVoltageBases, Sizeof(LegalVoltageBases^[1]) * (Num + 1));
        j := 1;
        for i := (0) to (ValueCount - 1) do
        begin
            LegalVoltageBases^[j] := Value[i];
            Inc(j)
        end;
        LegalVoltageBases^[Num + 1] := 0.0;
    end;

end;
//------------------------------------------------------------------------------
function Settings_Get_PriceCurve_AnsiString(): Ansistring; inline;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
        Result := ActiveCircuit[ActiveActor].PriceCurve
    else
        Result := '';
end;

function Settings_Get_PriceCurve(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Settings_Get_PriceCurve_AnsiString());
end;
//------------------------------------------------------------------------------
function Settings_Get_PriceSignal(): Double; CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
        Result := ActiveCircuit[ActiveActor].Pricesignal
    else
        Result := 0.0;

end;
//------------------------------------------------------------------------------
procedure Settings_Set_PriceCurve(const Value: PAnsiChar); CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
        with ActiveCircuit[ActiveActor] do
        begin
            PriceCurve := Value;
            PriceCurveObj := LoadShapeClass[ActiveActor].Find(Pricecurve);
            if PriceCurveObj = NIL then
                DoSimpleMsg('Price Curve: "' + Pricecurve + '" not found.', 5006);
        end;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_PriceSignal(Value: Double); CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
        ActiveCircuit[ActiveActor].PriceSignal := Value;
end;
//------------------------------------------------------------------------------
end.
